# ywflow

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  PKGBUILD  README.md  ywflow.yaml
.claude/: CLAUDE.md  settings.json
.github/workflows/: ci.yml  release.yml
docs/: config.md  ywflow.1
docs/examples/: full.md  minimal.md  prd-workflow.md
docs/man/: ywflow.1.md
packaging/aur/: PKGBUILD.template
packaging/deb/: control
packaging/debian/: control
scripts/: build-aur.sh  build-deb.sh  build-pkg.sh  install-deps.sh
src/: cli.rs  config.rs  context.rs  input.rs  lib.rs  main.rs  plugins.rs  prompt.rs  workflow.rs
tests/: docs_examples.rs  integration.rs  man_page.rs  readme_config.rs
tests/assets/: ywflow.yaml
